--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "json-loader": "^0.5.7",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
